<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pro_bridge</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="proninaa@a-r-s.dev">Pronin Alexander</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend>python3-zmq</exec_depend>

  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">rospy</build_export_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
